Changes to run with JDK 17.
Signed-off-by: Santiago Pericas-Geertsen <santiago.pericasgeertsen@oracle.com>