@@ -1,4 +1,4 @@
-FROM maven:3.6.1-jdk-11-slim as maven
+FROM maven:3.8.1-openjdk-17-slim as maven
 
 ENV http_proxy http://www-proxy-hqdc.us.oracle.com:80
 ENV https_proxy http://www-proxy-hqdc.us.oracle.com:80
@@ -14,7 +14,7 @@ COPY src src
 COPY pom.xml pom.xml
 RUN mvn package -q
 
-FROM openjdk:11.0.3-jdk-slim
+FROM openjdk:17.0.1-jdk-slim
 WORKDIR /helidon
 COPY --from=maven /helidon/target/libs libs
 COPY --from=maven /helidon/target/benchmark.jar app.jar
@@ -24,7 +24,6 @@ EXPOSE 8080
 CMD java -server \
     -XX:-UseBiasedLocking \
     -XX:+UseNUMA \
-    -XX:+AggressiveOpts \
     -XX:+UseParallelGC \
     -Dio.netty.buffer.checkBounds=false \
     -Dio.netty.buffer.checkAccessible=false \
